testsuite/tests/roles/should_fail/T9204a.hs
module T9204a where
import {-# SOURCE #-} T9204
